website spacing corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
 
 h1 {
   color: rgb(67, 32, 32);
-  font-size: 5rem;
+  font-size: 6rem;
   margin: 10px auto 0 auto;
   font-family: 'Merriweather', light;
   font-style: italic;
